# codex-buddy

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.codex/: hooks.json
.codex/hooks/: codex_buddy_hook.py
docs/: codex-buddy-port-plan.md  firmware-attribution.md  handoff-next-worker.md
docs/handoffs/: AGE-284-release-validation.md
docs/workflow-playbook/: README.md
docs/workflow-playbook/issues/: AGE-272-workflow-docs-alignment.md  AGE-279-local-safety-policy.md  AGE-280-hardware-hook-decisions.md  AGE-284-end-to-end-release-validation.md  AGE-302-completion-alerts-project-identity.md  CB-001-codex-desktop-hook-discovery.md  README.md
firmware/claude-desktop-buddy/: CODEX_BUDDY.md
firmware/claude-desktop-buddy/src/: data.h  main.cpp
src/codex_buddy_bridge/: __init__.py  ble.py  cli.py  device_input.py  hook.py  hooks_config.py  launch_agent.py  policy.py  server.py  state.py
tests/: test_ble_discovery.py  test_device_input.py  test_hook_script.py  test_hooks_config.py  test_launch_agent.py  test_policy.py  test_serial_bridge.py  test_server.py  test_state.py
